# vekta

./: Cargo.toml  LICENSE  Readme.md  embeddings_small.jsonl  query_embeddings.jsonl  query_embeddings_small.jsonl  vekta_config.toml
benches/: benchmark.rs
scripts/: gen_embeddings.py  test_vekta.py  test_vekta.sh
src/: ann.rs  config.rs  database.rs  main.rs  search.rs  vector_entry.rs  vector_ops.rs
