[package]
name = "vekta"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.5"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.5"
wide = "0.7"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"
rand = "0.8"


[[bench]]
name = "benchmark"
harness = false