[package]
name = "vekta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
memmap2 = "0.5"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wide = "0.7"
lmdb = "0.8"
bincode = "1.3"


[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"
rand = "0.8"


[[bench]]
name = "benchmark"
harness = false